componente casi hecho

--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,26 +1,27 @@
-<div class="text-center">
-  <div class="container">
+<div class="container fondo-primario mt-5" >
+  <br>
+  <div class="container text-center">
     <h1>Hazte Cliente</h1>
-    <form class="needs-validation">
-      <div class="row">
-        <div class="col-md-6 mb-3">
+    <form class="align-items-center needs-validation">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
           <label for="nombre">Nombre:</label>
           <input type="text" class="form-control" id="nombre" [(ngModel)]="name" name="name" required>
           <div class="valid-tooltip"></div>
         </div>
-        <div class="col-md-6 mb-3">
+        <div class="col-md-4 mb-3">
           <label for="apellidos">Apellidos:</label>
           <input type="text" class="form-control" id="apellidos" [(ngModel)]="secondName" name="secondName" required>
           <div class="valid-tooltip"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
           <label for="telefono">Telefono:</label>
           <input type="text" class="form-control" id="telefono" [(ngModel)]="phone" name="phone" required>
           <div class="valid-tooltip"></div>
         </div>
-        <div class="col-md-6 mb-3">
+        <div class="col-md-4 mb-3">
           <label for="documentodeidentidad">Documento de Identidad</label>
           <div class="input-group">
             <select class="custom-select" [(ngModel)]="identificationType" name="identificationType">
@@ -36,13 +37,13 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
           <label for="email">Email:</label>
           <input type="text" id="email" class="form-control" [(ngModel)]="email" name="email" required>
           <div class="invalid-tooltip"></div>
         </div>
-        <div class="col-md-6 mb-3">
+        <div class="col-md-4 mb-3">
           <label for="usuario">Usuario</label>
           <div class="input-group">
             <div class="input-group-prepend">
@@ -52,18 +53,16 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <input (change)="cargarImagen($event)" type="file" name="imagen" [(ngModel)]="imageString">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
+          <label for="image">Foto tamaño Carnet</label>
+          <input class="form-control" (change)="cargarImagen($event)" type="file" name="imagen"
+            [(ngModel)]="imageString"><br>
           <div *ngIf="previsualizacionURL">
-            <img width="150" [src]="previsualizacionURL" alt="">
+            <img width="150" class="mb-5 rounded" [src]="previsualizacionURL" alt="">
           </div>
-
-
         </div>
-
-
-        <div class="col-md-6 mb-3">
+        <div class="col-md-4 mb-3">
           <label for="contraseña">Contraseña</label>
           <div class="input-group">
             <div>
@@ -80,17 +79,13 @@
           </div>
         </div>
       </div>
-
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="d-flex justify-content-center text-center">
-          <button class="btn btn-primary mx-2" (click)="guardaDatos()" [disabled]="activo">Guardar</button>
-
-          <button class="btn btn-primary mx-2" (click)="comprobarDatos()">Comprobar</button>
-
+          <button class="btn btn-secondary mx-2" (click)="guardaDatos()" [disabled]="activo">Guardar</button>
+          <button class="btn btn-secondary mx-2" (click)="comprobarDatos()">Comprobar</button>
         </div>
       </div>
-
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="message-box">
           <h1 class="message mat-display-1">{{mensajeEmail}}</h1>
           <h1 class="message mat-display-1">{{mensajePhone}}</h1>
@@ -98,8 +93,8 @@
           <h1 class="message mat-display-1">{{mensajeIdentification}}</h1>
           <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
           <h1 class="message mat-display-1">{{mensajeImage}}</h1>
+          <h1 class="message mat-display-1">{{mensajeImage2}}</h1>
           <h1 class="message mat-display-1">{{mensaje}}</h1>
-
         </div>
       </div>
     </form>
