--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -15,17 +15,17 @@
         <th> Tarjeta crédito </th>
 
         <tr *ngFor="let element of elements">
-          <td><img [src]="getImage(element.image)" alt="{{ element.name + ' ' + element.last_name }}"></td>
+          <td><img [src]="getImage(element.image)" alt="{{ element.name + ' ' + element.secondName }}"></td>
           <td> {{ element.identification }} </td>
           <td> {{ element.name }} </td>
-          <td> {{ element.second_name }} </td>
+          <td> {{ element.secondName }} </td>
           <td> {{ element.address }} </td>
-          <td> {{ element.postal_code }} </td>
+          <td> {{ element.postalCode }} </td>
           <td> {{ element.city }} </td>
           <td> {{ element.country }} </td>
           <td> {{ element.email }} </td>
           <td> {{ element.phone }} </td>
-          <td> {{ element.credit_card }} </td>
+          <td> {{ element.creditCard }} </td>
 
           <td>
             <a href="" (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element)" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-pencil-fill"></i></a>
