--- a/src/app/componentes/subcategory/subcategory.component.html
+++ b/src/app/componentes/subcategory/subcategory.component.html
@@ -4,15 +4,18 @@
     <table class="table table-stripped table-bordered">
         <tr>
             <th class="text-center">DESCRIPCION</th>
-            <th class="text-center">ACIONES</th>           
+            <th class="text-center">CATEGORIA</th>  
+            <th class="text-center">ACIONES</th>   
+                    
         </tr>
-        <tr *ngFor="let subcategory of subcategories">
-            <td class="text-center">{{subcategory.description}}</td>
+        <tr *ngFor="let subcategoryBean of subcategories">
+            <td class="text-center">{{subcategoryBean.description}}</td>
+            <td class="text-center">{{subcategoryBean.category}}</td>
             <td class="text-center">
-                <a href="#" (click)="modificar(subcategory)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                <a href="#" (click)="modificar(subcategoryBean.id)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(subcategory._links.self.href.substring(subcategory._links.self.href.lastIndexOf('/')+1))">
+                <a href="#" (click)="eliminar(subcategoryBean.id)">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
