--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -28,16 +28,16 @@
           <td> {{ element.creditCard }} </td>
 
           <td>
-            <a href="" (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element)" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-pencil-fill"></i></a>
-            <a href="" class="wbtn" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
+            <a href="" (click)="openModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element, 'edit')" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-pencil-fill"></i></a>
+            <a href="" class="wbtn" (click)="delProfile(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
           </td>
         </tr>
       </table>
 
       <div class="w-100 text-center">
         <div class="text-primary mb-3" role="alert">{{ message }}</div>
-        <button type="button" class="btn btn-primary" (click)="abrirModal('','')" data-bs-toggle="modal" data-bs-target="#myModalProfile">Añadir nuevo producto</button>
+        <button type="button" class="btn btn-primary" (click)="openModal('','', 'add')" data-bs-toggle="modal" data-bs-target="#myModalProfile">Añadir nuevo producto</button>
       </div>
 
-      <app-modal-profiles #modal (eventoProfiles)="refreshData($event)"></app-modal-profiles>
+      <app-modal-profiles (eventoProfile)="handleEventoProfile($event)"></app-modal-profiles>
     </div>
