--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -15,8 +15,10 @@
     <option value="identificationsTypes">IdentificationsType</option>
     <option value="profiles">Profile</option>
     <option value="roles">Rol</option>
+    <option value="timingsTypes">TimingsTypes</option>
     <option value="transactions">Transaction</option>
     <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
+    <option value="transactionsProgramers">transactionsProgramer</option>
     <option value="typesAccounts">TypeAccount</option>
     <option value="users">User</option>
   </select>
