--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -8,7 +8,7 @@
     </tr>
     <tr *ngFor="let operacion of operaciones">
       <td>{{ operacion.date }}</td>
-      <td>{{ operacion.description }}</td>
+      <td>{{ operacion.current.description }}</td>
       <td>{{ operacion.current }}</td>
     </tr>
   </table>
