--- a/src/app/componentes/subcategory/subcategory.component.html
+++ b/src/app/componentes/subcategory/subcategory.component.html
@@ -15,13 +15,13 @@
                 <a href="#" (click)="modificar(subcategoryBean.id)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(subcategoryBean.id)">
+                <a  (click)="eliminar(subcategoryBean.id)">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
         </tr>
     </table>
     <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
-            data-bs-target="#myModal">ALTA</button></div>
+            data-bs-target="#myModal" (click)="alta()">ALTA</button></div>
     <app-modal-subcategory (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-subcategory>
 </div>
