--- a/src/app/componentes/category/category.component.html
+++ b/src/app/componentes/category/category.component.html
@@ -12,7 +12,7 @@
                 <a href="#" (click)="modificar(category)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(category._links.self.href.substring(category._links.self.href.lastIndexOf('/')+1))">
+                <a (click)="eliminar(category._links.self.href.substring(category._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
