--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -74,6 +74,6 @@
   <div class="container-fluid p-5 text-white text-center texto-resaltado">
     <h1>LA QUIERES YA</h1>
     <h2>en menos de diez minutos lo puedes hacer!</h2>
-    <button class="btn btn-light btn-lg"  role="button">¡Hazte Cliente!</button>
+    <h2>¡Hazte Cliente!</h2>
   </div>
 </div>
