--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,35 +1,35 @@
  <footer class="footer">
     <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
-            <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>           
+            <p class="h3"> <strong><em>TALENTOS</em></strong></p>           
                 <p class="fas fa-home me-3">Madrid, Lavapies</p>           
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h6 mb-2">PRODUCTOS</p>
 
             <div class="mb-1">
-                <a class="text-secondary text-decoration-none" href="https://pastaio.com">Pastas</a>
+                <a class="text-secondary text-decoration-none" href="https://www.elcorteingles.es/electronica/ofertas-electronica-tecnoprecios/monitores/">Pantallas</a>
             </div>
             <div class="mb-1">
-                <a class="text-secondary text-decoration-none" href="https://quesoss.com/italianos/">Quesos</a>
-            </div>
-            <div class="mb-1">
-                <a class="text-secondary text-decoration-none"
-                    href="https://www.laumont.es/products/trufa-blanca-tuber-magnatum">Trufas</a>
+                <a class="text-secondary text-decoration-none" href="https://www.elcorteingles.es/electronica/A43891703-portatil-hp-pavilion-14-dv2009ns-i5-16gb-1tb-ssd-14-w11/?parentCategoryId=999.13340219013&color=Dorado">Portatiles</a>
             </div>
             <div class="mb-1">
                 <a class="text-secondary text-decoration-none"
-                    href="https://www.vilaviniteca.es/content/vega_sicilia">Vinos</a>
+                    href="https://www.elcorteingles.es/hogar/">Hogar</a>
+            </div>
+            <div class="mb-1">
+                <a class="text-secondary text-decoration-none"
+                    href="https://www.elcorteingles.es/deportes/">Deportes</a>
             </div>
         </div>
   
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h6 mb-2">Links</p>
             <div class="mb-1">
-                <a class="text-secondary text-decoration-none" href="#">Terminos y Condiciones</a>
+                <a class="text-secondary text-decoration-none" href="https://cuenta.elcorteingles.es/condiciones-de-uso/?modal=1&locale=es#_ga=2.92110303.475048321.1688628394-1497597106.1688628394">Terminos y Condiciones</a>
             </div>
             <div class="mb-1">
-                <a class="text-secondary text-decoration-none" href="#">Politica de Privacidad</a>
+                <a class="text-secondary text-decoration-none" href="https://www.elcorteingles.es/politica-de-privacidad/">Politica de Privacidad</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
@@ -47,6 +47,6 @@
 
     </div>
 </footer>
-     
-  
+
+
    
