--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="mb-5">
-<div><h1>C.O.S.A.S "Comediantes Orquestando Situaciones Absurdamente Surrealistas"</h1></div>
+<div><h1>La Tienda del Señor De La Noche (Es Mitad Tienda Mitad Animal)</h1></div>
 <!-- 
   <app-nav *ngIf="logado"></app-nav>
   <app-login></app-login> 
