--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,8 +1,4 @@
 <header class="mb-5">
-<div><h1>La Tienda del Señor De La Noche (Es Mitad Tienda Mitad Animal)</h1></div>
-<!-- 
-  <app-nav *ngIf="logado"></app-nav>
-  <app-login></app-login> 
--->
+<div><h1>La tienda generica que vende cosas</h1></div>
 <app-nav></app-nav>  
 </header>
