Tocando cosas del nav y header

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,4 +1,7 @@
-<header class="mb-5">
-<div><h1>La tienda generica que vende cosas</h1></div>
-<app-nav></app-nav>  
+<header class="mb-5 text-center bg-dark text-white p-4">
+  <div>
+    <h1 class="fs-3 fs-md-4">La tienda genérica que vende cosas</h1>
+  </div>
+  <app-nav></app-nav>  
 </header>
+
