--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -1,31 +1,35 @@
-<nav>
-  <ul class="nav nav-pills nav-justified bg-dark">
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="home">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="usuarios">Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="roles">Roles</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="categorias">Categorias</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="subcategorias">Subcategorias</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="product">Productos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="conf">Configuración</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="tipoDocumentos">Tipos de documentos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active bg-dark text-white" routerLink="tipoTarjetas">Tipos de tarjetas</a>
-    </li>
-  </ul>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <ul class="navbar-nav w-100 d-flex justify-content-between">
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="usuarios">Usuarios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="roles">Roles</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="categorias">Categorias</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="subcategorias">Subcategorias</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="product">Productos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="conf">Configuración</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="tipoDocumentos">Tipos de documentos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="tipoTarjetas">Tipos de tarjetas</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
