--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.btn.active {
+/* .btn.active {
     background-color: chartreuse;
     color: azure;
     font-weight: bold;
@@ -6,4 +6,4 @@
 
 .router-link-active{
     background-color:forestgreen;
-}
+} */
