--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,34 +1,75 @@
-<nav class="navbar navbar-expand-sm bg-success navbar-success mt-5">
-  <div class="container">
+<div class="mx-5 fondo-secundario">
+  <div class="mt-3">
+    <ul class="nav nav-pills justify-content-start p-2" role="tablist">
+      <li class="nav-item me-5 p-2">
+        <a class="nav-link" routerLink="cuentas" (click)="deselegirCuenta()">Mi Área</a>
+      </li>
+      <ng-container *ngIf="cuentaElegida">
+        <li class="nav-item ms-5 p-2">
+          <a class="nav-link active" data-bs-toggle="pill" routerLink="detalles">Detalles</a>
+        </li>
+        <li class="nav-item p-2">
+          <a class="nav-link" data-bs-toggle="pill" routerLink="movimientos">Movimientos</a>
+        </li>
+        <li class="nav-item p-2">
+          <a class="nav-link" data-bs-toggle="pill" routerLink="operaciones">Operar</a>
+        </li>
+      </ng-container>
+    </ul>
+  </div>
+</div>
+
+
+<!-- <nav class="navbar navbar-success fondo-secundario mt-5">
+
     <a class="navbar-brand" style="color: gold; margin-right: 20px;" href="#" role="button" (click)="toggleMenu()"
       routerLink="cuentas">Mi Área
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-check-fill"
         viewBox="0 0 16 16">
         <path fill-rule="evenodd"
           d="M15.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+        <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4 -1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
       </svg>
     </a>
-  </div>
-  <div class="container-fluid justify-content-center" id="navbarOptions"
-    [style.display]="menuVisible ? 'block' : 'none'">
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['detalles']" [ngClass]="{ 'router-link-active': isRouteActive('detalles') }">
-          <button id="detalles" type="button" class="btn btn-outline-light">Estado de la Cuenta</button></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['movimientos']" [ngClass]="{ 'router-link-active': isRouteActive('movimientos') }">
-          <button id="movimientos" type="button" class="btn btn-outline-light">Movimientos</button></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['operaciones']" [ngClass]="{ 'router-link-active': isRouteActive('operaciones') }">
-          <button id="operaciones" type="button" class="btn btn-outline-light">Operaciones</button></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['productos']" [ngClass]="{ 'router-link-active': isRouteActive('productos') }">
-          <button id="productos" type="button" class="btn btn-outline-light">Productos Asociados</button></a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+    <div class="container-fluid justify-content-center" id="navbarOptions"
+      [style.display]="menuVisible ? 'block' : 'none'">
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['detalles']"
+            [ngClass]="{ 'router-link-active': isRouteActive('detalles') }">
+            <button id="detalles" type="button" class="btn btn-outline-light">Estado de la Cuenta</button></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['movimientos']"
+            [ngClass]="{ 'router-link-active': isRouteActive('movimientos') }">
+            <button id="movimientos" type="button" class="btn btn-outline-light">Movimientos</button></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['operaciones']"
+            [ngClass]="{ 'router-link-active': isRouteActive('operaciones') }">
+            <button id="operaciones" type="button" class="btn btn-outline-light">Operaciones</button></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['productos']"
+            [ngClass]="{ 'router-link-active': isRouteActive('productos') }">
+            <button id="productos" type="button" class="btn btn-outline-light">Productos Asociados</button></a>
+        </li>
+      </ul>
+    </div>
+  </nav> -->
+<!-- Tab panes -->
+<!-- <div class="tab-content">
+      <div id="home" class="container tab-pane active"><br>
+        <h3>HOME</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div id="menu1" class="container tab-pane fade"><br>
+        <h3>Menu 1</h3>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div id="menu2" class="container tab-pane fade"><br>
+        <h3>Menu 2</h3>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      </div>
+    </div> -->
