--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -15,7 +15,7 @@
           <div class="input-group mb-2">
             <label class="input-group-text spw-3" for="inputGroupSelect01">Categoria</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected></option>
+              <option selected>{{categoria}}</option>
               <option *ngFor="let category of categories" [value]="category.description">{{category.description}}</option>
             </select>
           </div>
@@ -25,8 +25,8 @@
           <div class="input-group mb-2">
             <label class="input-group-text spw-3" for="inputGroupSelect01">Subcategoria</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected></option>
-              <option *ngFor="let subcategory of subcategories" [value]="subcategory.description">{{subcategory.description}}</option>
+              <option selected>{{subcategoria}}</option>
+              <option *ngFor="let subcategory of subcategories" [value]="subcategory.id">{{subcategory.description}}</option>
             </select>
           </div>
         </div>
