--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -7,10 +7,11 @@
       </div>
       <div class="modal-body text-center">
         <div class="mb-3">
-          <img [src]="getImage(image)" [alt]="description" class="rounded mb-3 img-size" id="setImage"><br>
+          <img [src]="getImageProduct(image)" [alt]="description" class="rounded mb-3 img-size" id="setImageProduct"><br>
           <label for="file-input" class="text-primary text-decoration-none">Cambiar foto del producto</label>
-          <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
+          <input type="file" (change)="fileUploadProduct($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
         </div>
+
         <div class="input-group mb-2">
           <div class="input-group mb-2">
             <label class="input-group-text spw-3" for="inputGroupSelect01">Categoria</label>
