--- a/src/app/componentes/modal-profiles/modal-profiles.component.html
+++ b/src/app/componentes/modal-profiles/modal-profiles.component.html
@@ -8,9 +8,9 @@
 
       <div class="modal-body text-center">
         <div class="mb-3">
-          <img [src]="getImage(image)" [alt]="firstname" class="rounded mb-3 img-size" id="setImage"><br>
+          <img [src]="getImageProfile(image)" [alt]="firstname" class="rounded mb-3 img-size" id="setImageProfile"><br>
           <label for="file-input" class="text-primary text-decoration-none">Cambiar foto del perfil</label>
-          <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
+          <input type="file" (change)="fileUploadProfile($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
         </div>
 
         <div class="input-group mb-2">
