--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <div class="min-vh-100">
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer> -->
-<app-login></app-login>
+<app-footer></app-footer>
+<!-- <app-login></app-login> -->
