--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -2,34 +2,32 @@
   <div class="container">
     <ul class="navbar-nav w-100 d-flex justify-content-between">
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="home">Home</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="usuarios">Usuarios</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="usuarios">Usuarios</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="roles">Roles</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="roles">Roles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="categorias">Categorias</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="categorias">Categorias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="subcategorias">Subcategorias</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="subcategorias">Subcategorias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="product">Productos</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="product">Productos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="conf">Configuración</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="conf">Configuración</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="tipoDocumentos">Tipos de documentos</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="tipoDocumentos">Documentos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active btn btn-light text-dark mx-2" routerLink="tipoTarjetas">Tipos de tarjetas</a>
+        <a class="nav-link active btn btn-light text-dark btn-sm mx-2" routerLink="tipoTarjetas">Medios de pago</a>
       </li>
     </ul>
   </div>
 </nav>
-
-
