--- a/src/app/productos-asociados/productos-asociados.component.html
+++ b/src/app/productos-asociados/productos-asociados.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid justify-content-center id=navbarOptions"
+<!-- <div class="container-fluid justify-content-center id=navbarOptions"
     [style.display]="menuVisible ? 'block' : 'none'">
     <ul class="nav  justify-content-center">
         <li class="nav-item">
@@ -42,4 +42,4 @@
             </a>
         </li>
     </ul>
-</div>
+</div> -->
