--- a/src/app/detalles-cuenta/detalles-cuenta.component.html
+++ b/src/app/detalles-cuenta/detalles-cuenta.component.html
@@ -1,1 +1,14 @@
-<p>PEPA PIG </p>
+<div>
+  <h2>Detalles de la cuenta</h2>
+  <p>Cuenta elegida: {{ cuentaElegida }}</p>
+  <p>Saldo de la cuenta: {{ saldoCuenta }}</p>
+  <p>Interés: {{ interes }}</p>
+  <p>Descripción: {{ description }}</p>
+  <p>Fecha de creación: {{ cuentaCreacion}}</p>
+</div>
+
+
+
+
+
+
