--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,120 +1,4 @@
-<!-- <div *ngIf="!logado" class="d-flex justify-content-end align-items-center">
-    <button mat-button (click)="onPress()"> INGRESAR </button>
-    <button mat-button routerLink="resgiter()"> REGISTRARSE (llamado de pagina pendiente)</button>
-</div> -->
-
-<div *ngIf="logado" class="d-flex justify-content-end align-items-center">
-    <button mat-button> Bienvenido/a {{user}} </button>
-    <button mat-button (click)="closeSession()"> SALIR </button>
+<div class="d-flex justify-content-end align-items-center">
+    <button mat-raised-button (click)="openDialog()"><mat-icon>home</mat-icon>Ingresar</button>
+    <button mat-raised-button > Registrarse</button>
 </div>
-<div *ngIf="!logado" class="d-flex justify-content-end align-items-center">
-    <form class="example-form">
-        <mat-form-field class="example-full-width">
-            <mat-label>Usuario</mat-label><br>
-            <input matInput placeholder="Usuario" [(ngModel)]="inputUser" name="inputUser" id="inputU">
-            
-        </mat-form-field><br><br>
-
-        <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label><br>
-            <input matInput placeholder="Contraseña" [type]="hide ? 'password' : 'text'" [(ngModel)]="inputPassword">
-            <mat-error *ngIf="passwordFormControl.hasError('required')">
-                please enter a valid Contraseña (verificar si aun funciona)
-            </mat-error>
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
-    
-    </form>
-</div>
-<!-- <<div class="modalConectando oculto" id="modalConectando">
-    <div class="contenedorModal mx-auto mt-5">
-        <div class="align-items-center">
-            <div class="p-2 mx-1 justify-content-center">Estableciendo conexión segura</div>
-            <div class="p-2 mt-3 align-items-center d-flex justify-content-center">
-                <strong>Loading...</strong>
-                <div class="spinner-border m-2" role="status" aria-hidden="true"></div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="tiempoCabecera texto-resaltado">
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-        data-bs-backdrop="false">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Maquina del Tiempo</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Menú de ajustes para acelerar el tiempo
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div>
-    <button class="button-success" type="button" (click)="getDocumentsTypes()">document Types</button>
-</div>
-<div>
-    <button class="button-success" type="button" (click)="errorDeToken()">meter token falso</button>
-</div>
-<div *ngIf="!logado">
-    <button class="btnHazteCliente">Hazte cliente</button>
-    <button class="btnLogin texto-primario" type="button" data-bs-toggle="collapse"
-        data-bs-target="#zonaColapsableLogin" aria-expanded="false" aria-controls="zonaColapsableLogin"
-        (click)="colorearBotonLoginAlPulsar()">Acceso</button>
-</div>
-<div *ngIf="logado">
-    <button class="btnHazteCliente">Hola {{user}}</button>
-    <button class="btnLogin texto-primario" type="button" (click)="closeSession()">Salir</button>
-</div>
-
-<div *ngIf="!logado" class="zonaColapsable collapse" id="zonaColapsableLogin">
-    <div class="cajaLoginInfo fondo-primario">
-
-        <div class="contenedorLogin">
-            <div class="formularioLogin">
-                <h2>nuevo Usuario</h2>
-                <form action="#" method="post" spellcheck="false">
-                    <div class="inputCasilla">
-                        <input type="text" required [(ngModel)]="inputUser" name="inputUsuario" id="inputU">
-                        <label>Usuario</label>
-                    </div>
-                    <div class="inputCasilla">
-                        <input type="password" required [(ngModel)]="inputPassword" name="inputPassword" id="inputP">
-                        <label>Clave de acceso</label>
-                    </div>
-                    <div class="recordar">
-                        <a href="#">¿Olvidó su clave?</a>
-                    </div>
-                    <button type="submit" class="btnSubmit" (click)="logarse()">Entrar</button>
-                    <div class="loginARegisto">
-                        <p>¿Aún no eres cliente? <a href="#">Hazte Cliente</a></p>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="infoLogin">
-            <div class="contenido">
-                <div *ngIf="incorrectKey; else mensaje" class="alert alert-danger">
-                    <p class="mt-2">
-                        {{keyMessage}}</p>
-                </div>
-                <ng-template #mensaje>
-                    <p class="mt-2">
-                        Tus claves de acceso son secretas e intransferibles</p>
-                    <p class="mt-2">No las compartas con nadie ni las proporciones a través de correo o de SMS</p>
-                </ng-template>
-            </div>
-        </div>
-    </div>
-</div> -->
