--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="mb-5">
 <div><h1>La Poyeria</h1></div>
-
+  <div>
   <!-- <app-nav *ngIf="logado"></app-nav> -->
   <app-login></app-login> 
-
+</div>
 <app-nav *ngIf="!logado"></app-nav>  
 </header>
