Subiendo los componentes actualizados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<!--<app-profile></app-profile>-->
 <app-existing-product></app-existing-product>
 
 <div class="min-vh-100">
