--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -15,19 +15,19 @@
         <div class="input-group mb-2">
           <div class="input-group mb-2">
             <label class="input-group-text spw-3" for="inputGroupSelect01">Categoria</label>
-            <select class="form-select" id="inputGroupSelect01">
-              <option selected>{{categoriaInput}}</option>
+            <select class="form-select" id="inputGroupSelect01" [(ngModel)]="categoriaInput" (change)="onCategoryChange()">
+              <option value="">Selecciona categoría..</option>
               <option *ngFor="let category of categories" [value]="category.description">{{category.description}}</option>
             </select>
           </div>
         </div>
-
+      
         <div class="input-group mb-2">
           <div class="input-group mb-2">
-            <label class="input-group-text spw-3" for="inputGroupSelect01">Subcategoria</label>
-            <select class="form-select" id="inputGroupSelect01" [(ngModel)]="subcategory">
-              <option value="0">Selecciona subcategoria..</option>
-              <option *ngFor="let subcategory of subcategories" [value]="subcategory.id">{{subcategory.description}}</option>
+            <label class="input-group-text spw-3" for="inputGroupSelect02">Subcategoria</label>
+            <select class="form-select" id="inputGroupSelect02" [(ngModel)]="subcategoriaInput">
+              <option value="">Selecciona subcategoria..</option>
+              <option *ngFor="let subcategory of subcategories" [value]="subcategory.description" [attr.data-id]="subcategory._links.self.href.split('/').pop()">{{subcategory.description}}</option>
             </select>
           </div>
         </div>
@@ -61,7 +61,7 @@
       <div class="modal-footer">
         <div class="d-grid gap-2 d-md-block">
           <button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal"
-            (click)="closeModal();">Cerrar</button>
+            (click)="closeModalProduct();">Cerrar</button>
           <button class="btn btn-primary" type="button" (click)="saveData();">Guardar</button>
         </div>
       </div>
