--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -28,8 +28,8 @@
           <td> {{ element.creditCard }} </td>
 
           <td>
-            <a href="" (click)="openModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element, 'edit')" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-pencil-fill"></i></a>
-            <a href="" class="wbtn" (click)="delProfile(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
+            <a (click)="openModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element, 'edit')" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-pencil-fill"></i></a>
+            <a class="wbtn" (click)="delProfile(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
           </td>
         </tr>
       </table>
