Cargar la aplicación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<!--<app-profile></app-profile>-->
-<app-existing-product></app-existing-product>
+<!--<app-profile></app-profile>
+<app-existing-product></app-existing-product>-->
 
 <div class="min-vh-100">
 <router-outlet></router-outlet>
