--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<div class="container p-2 px-5 mt-5">
+<div class="container p-2 px- mt-5">
   <div class="p-1 texto-secundario shadow barraNav">
-    <ul class="nav justify-content-start align-items-center flex-nowrap px-3" role="tablist" id="navId">
-      <li class="nav-item me-5">
+    <ul class="nav justify-content-center align-items-center flex-nowrap px-3" role="tablist" id="navId">
+      <li class="nav-item me-auto">
         <a class="nav-link" routerLink="cuentas" (click)="deselegirCuenta()">
           <span class="texto-resaltado">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home pb-1 mx-1" width="24"
